api-connect/booking-api-gateway/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-api-gateway
  namespace: cloud-connect
spec:
  ingressClassName: ext-general
  tls:
  - hosts:
    - dev-cloud-connect.opusxenta.dev
    secretName: cert-dev-cloud-connect.opusxenta.dev
  rules:
  - host: dev-cloud-connect.opusxenta.dev
    http:
      paths:
      - path: /api/v1/booking
        pathType: Prefix
        backend:
          service:
            name: booking-api-gateway
            port:
              number: 3000
      - path: /booking-doc
        pathType: Prefix
        backend:
          service:
            name: booking-api-gateway
            port:
              number: 3000
